--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest package="com.mw2c.pipboy200011.motionlayoutlecture"
-          xmlns:android="http://schemas.android.com/apk/res/android">
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
     <application
         android:allowBackup="true"
@@ -9,15 +9,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MotionSceneExampleSecondActivity">
-        </activity>
-        <activity android:name=".MotionSceneExampleFirstActivity">
-        </activity>
+        <activity android:name=".KeyFramesExampleFirstActivity"></activity>
+        <activity android:name=".CustomAttributeExampleSecondActivity" />
+        <activity android:name=".CustomAttributeExampleFirstActivity" />
+        <activity android:name=".MotionSceneExampleSecondActivity" />
+        <activity android:name=".MotionSceneExampleFirstActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
+                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
     </application>
